aprendi a futucar um pouco dessa api do warframe.market, o sistema esta tomando um direcionamento ainda estou estudando um layout e pensando no que seria bom pra esse sistema como um jogador do game focado no mercado

--- a/public/css/template.css
+++ b/public/css/template.css
@@ -10,15 +10,23 @@
 }
 .main-page{
     margin: auto;
-    border-radius: 5px;
     background-color: white;
     width: 500px;
     height: 500px;
 }
 .itens-page{
     margin: auto;
-    border-radius: 5px;
     background-color: white;
     width: 500px;
     height: 500px;
 }
+.text-sm{
+    font-size: 12px;
+}
+.bg-purple{
+    background-color:#07111B;
+}
+/* .bg-black {
+    --bs-bg-opacity: 1;
+    background-color: rgba(var(--bs-black-rgb),var(--bs-bg-opacity))!important;
+} */
